k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stayzio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: stayzio.local
      http:
        paths:
          # Frontend static web app
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: stayzio-client-service
                port:
                  number: 3000
          # Backend API services
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: stayzio-server-service
                port:
                  number: 3002
